--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,11 @@
 pytest==7.4.3
 black==23.11.0
 flake8==6.1.0 
+
+fastapi==0.109.2
+sqlalchemy==2.0.27
+asyncpg==0.29.0
+psycopg2-binary==2.9.9
+uvicorn==0.27.1
+python-dotenv==1.0.1
+pydantic==2.6.1
